--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 
 .gallery {
     margin: 0 auto;
@@ -14,6 +19,46 @@
     padding-top: 24px;
     padding-bottom: 24px;
     
+} */
+body {
+margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+button {
+    cursor: pointer;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.gallery {
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    background: #fff;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    width: 1440px;
+    min-height: 696px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
 }
 
 .gallery-image {
@@ -21,7 +66,7 @@
     height: 200px;
     object-fit: cover;
     transition: transform .2s;
-    padding: 0;
+
 }
 
 
